changed URL in settings

--- a/output/tags.html
+++ b/output/tags.html
@@ -8,30 +8,30 @@
         <meta name="copyright" content="Gregory Alonge" />
         <meta name="robots" content="index,follow">
 
-        <link rel="stylesheet" href="http://localhost:8000/theme/css/main.css" type="text/css" />
+        <link rel="stylesheet" href="https://galonge3.github.io/theme/css/main.css" type="text/css" />
 
         <!--[if IE]>
                 <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
         <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="http://localhost:8000/css/ie.css"/>
-                <script src="http://localhost:8000/js/IE8.js" type="text/javascript"></script><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie.css"/>
+                <script src="https://galonge3.github.io/js/IE8.js" type="text/javascript"></script><![endif]-->
 
         <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="http://localhost:8000/css/ie6.css"/><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie6.css"/><![endif]-->
 
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://localhost:8000">Greg Alonge </a></h1>
+                <h1><a href="https://galonge3.github.io">Greg Alonge </a></h1>
                 <br>
                 <nav>
                     <a href="/pages/about.html">About</a>&nbsp;
-                    <a href="http://localhost:8000/category/philosophy.html">philosophy</a>&nbsp;
+                    <a href="https://galonge3.github.io/category/philosophy.html">philosophy</a>&nbsp;
                 </nav>
         </header><!-- /#banner -->
-    <h1>Tags for Greg Alonge</h1>        <li><a href="http://localhost:8000/tag/philosophy.html">philosophy</a> (2)</li>
+    <h1>Tags for Greg Alonge</h1>        <li><a href="https://galonge3.github.io/tag/philosophy.html">philosophy</a> (2)</li>
         <section id="extras" class="body">
         </section><!-- /#extras -->
 
