--- a/output/archives.html
+++ b/output/archives.html
@@ -8,27 +8,27 @@
         <meta name="copyright" content="Gregory Alonge" />
         <meta name="robots" content="noindex,follow">
 
-        <link rel="stylesheet" href="http://localhost:8000/theme/css/main.css" type="text/css" />
+        <link rel="stylesheet" href="https://galonge3.github.io/theme/css/main.css" type="text/css" />
 
         <!--[if IE]>
                 <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
         <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="http://localhost:8000/css/ie.css"/>
-                <script src="http://localhost:8000/js/IE8.js" type="text/javascript"></script><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie.css"/>
+                <script src="https://galonge3.github.io/js/IE8.js" type="text/javascript"></script><![endif]-->
 
         <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="http://localhost:8000/css/ie6.css"/><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie6.css"/><![endif]-->
 
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://localhost:8000">Greg Alonge </a></h1>
+                <h1><a href="https://galonge3.github.io">Greg Alonge </a></h1>
                 <br>
                 <nav>
                     <a href="/pages/about.html">About</a>&nbsp;
-                    <a href="http://localhost:8000/category/philosophy.html">philosophy</a>&nbsp;
+                    <a href="https://galonge3.github.io/category/philosophy.html">philosophy</a>&nbsp;
                 </nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -36,9 +36,9 @@
 
 <dl>
     <dt>Tue 03 July 2018</dt>
-    <dd><a href="http://localhost:8000/situations-and-choices.html">Situations and Choices: The Sum of Our Life as We Experience It</a></dd>
+    <dd><a href="https://galonge3.github.io/situations-and-choices.html">Situations and Choices: The Sum of Our Life as We Experience It</a></dd>
     <dt>Mon 02 July 2018</dt>
-    <dd><a href="http://localhost:8000/situations-and-choices-preface.html">Situations and Choices: Preface</a></dd>
+    <dd><a href="https://galonge3.github.io/situations-and-choices-preface.html">Situations and Choices: Preface</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
