--- a/archives.html
+++ b/archives.html
@@ -8,41 +8,43 @@
         <meta name="copyright" content="Gregory Alonge" />
         <meta name="robots" content="noindex,follow">
 
-        <link rel="stylesheet" href="https://galonge3.github.io/theme/css/main.css" type="text/css" />
+        <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
 
         <!--[if IE]>
                 <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
         <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie.css"/>
-                <script src="https://galonge3.github.io/js/IE8.js" type="text/javascript"></script><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie.css"/>
+                <script src="/js/IE8.js" type="text/javascript"></script><![endif]-->
 
         <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="https://galonge3.github.io/css/ie6.css"/><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie6.css"/><![endif]-->
 
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://galonge3.github.io">Greg Alonge </a></h1>
+                <h1><a href="">Greg Alonge </a></h1>
                 <br>
                 <nav>
                     <a href="/pages/about.html">About</a>&nbsp;
-                    <a href="https://galonge3.github.io/category/philosophy.html">philosophy</a>&nbsp;
+                    <a href="/category/philosophy.html">philosophy</a>&nbsp;
                 </nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Greg Alonge</h1>
 
 <dl>
+    <dt>Sat 27 July 2019</dt>
+    <dd><a href="/day-at-the-museum.html">Day at the Museum: The Phenomenology of My Recent Pilgrimage to Art</a></dd>
     <dt>Sat 22 December 2018</dt>
-    <dd><a href="https://galonge3.github.io/freedom-flowers.html">Freedom Flowers:  How One Woman Exemplified an Entire Generation’s Liberation</a></dd>
+    <dd><a href="/freedom-flowers.html">Freedom Flowers:  How One Woman Exemplified an Entire Generation’s Liberation</a></dd>
     <dt>Mon 05 November 2018</dt>
-    <dd><a href="https://galonge3.github.io/eros-as-an-active-force.html">Eros as an Active Force in The Will To Power</a></dd>
+    <dd><a href="/eros-as-an-active-force.html">Eros as an Active Force in The Will To Power</a></dd>
     <dt>Tue 03 July 2018</dt>
-    <dd><a href="https://galonge3.github.io/situations-and-choices.html">Situations and Choices: The Sum of Our Life as We Experience It</a></dd>
+    <dd><a href="/situations-and-choices.html">Situations and Choices: The Sum of Our Life as We Experience It</a></dd>
     <dt>Mon 02 July 2018</dt>
-    <dd><a href="https://galonge3.github.io/situations-and-choices-preface.html">Situations and Choices: Preface</a></dd>
+    <dd><a href="/situations-and-choices-preface.html">Situations and Choices: Preface</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
