--- a/categories.html
+++ b/categories.html
@@ -28,11 +28,13 @@
                 <br>
                 <nav>
                     <a href="/pages/about.html">About</a>&nbsp;
+                    <a href="/category/law.html">law</a>&nbsp;
                     <a href="/category/philosophy.html">philosophy</a>&nbsp;
                 </nav>
         </header><!-- /#banner -->
     <h1>Categories on Greg Alonge</h1>
     <ul>
+        <li><a href="/category/law.html">law</a> (1)</li>
         <li><a href="/category/philosophy.html">philosophy</a> (5)</li>
     </ul>
         <section id="extras" class="body">
