--- a/freedom-flowers.html
+++ b/freedom-flowers.html
@@ -32,6 +32,7 @@
                 <br>
                 <nav>
                     <a href="/pages/about.html">About</a>&nbsp;
+                    <a href="/category/law.html">law</a>&nbsp;
                     <a href="/category/philosophy.html">philosophy</a>&nbsp;
                 </nav>
         </header><!-- /#banner -->
